@@ -33,6 +33,8 @@ Copyright (C)2001 Jonathan Stowe <jns@gellyfish.com>
 This software carries no warranty either express of implied.
 
 This is free software, it can be distributed and/or modified under the
-same terns as Perl itself.
+same terms as Perl itself.  The Perl license can be found in the file
+README in the Perl source distribution.
+
 
 
