@@ -4,3 +4,6 @@ Mon Mar  5 06:54:55 2001
 	- original version; created by h2xs 1.21 with options
 		-AXn Linux::Fuser -b5.5.0
 
+Wed Nov  7 06:55:38 GMT 2001
+        - 1.2 Fixed cut and paste think reported by Shawn Ferris
+              added new test.
